; ModuleID = '/home/carl/AnghaBench/reactos/drivers/filesystems/ext2/src/ext4/extr_ext4_jbd2.c___ext4_handle_dirty_metadata.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/filesystems/ext2/src/ext4/extr_ext4_jbd2.c___ext4_handle_dirty_metadata.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.buffer_head = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @__ext4_handle_dirty_metadata(i8* %0, i32 %1, i8* %2, i32* %3, %struct.inode* %4, %struct.buffer_head* %5) #0 {
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca %struct.inode*, align 8
  %12 = alloca %struct.buffer_head*, align 8
  %13 = alloca i32, align 4
  store i8* %0, i8** %7, align 8
  store i32 %1, i32* %8, align 4
  store i8* %2, i8** %9, align 8
  store i32* %3, i32** %10, align 8
  store %struct.inode* %4, %struct.inode** %11, align 8
  store %struct.buffer_head* %5, %struct.buffer_head** %12, align 8
  store i32 0, i32* %13, align 4
  %14 = load %struct.buffer_head*, %struct.buffer_head** %12, align 8
  %15 = call i32 @extents_mark_buffer_dirty(%struct.buffer_head* %14)
  %16 = load i32, i32* %13, align 4
  ret i32 %16
}

declare dso_local i32 @extents_mark_buffer_dirty(%struct.buffer_head*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
